--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,3 +1,6 @@
+<h1>All lists</h1>
 <% @lists.each do |list| %>
-  render 'list_card', list: list
+  <%= render 'list_card', list: list %>
 <% end %>
+
+<%= link_to 'Add a new list', new_list_path %>
