--- a/app/assets/stylesheets/components/_movie_card.scss
+++ b/app/assets/stylesheets/components/_movie_card.scss
@@ -1,7 +1,12 @@
+.movie-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+  padding: 1rem;
+}
+
 .movie-card{
-  min-height: 300x;
   flex: 1;
-  max-width: 300px;
   justify-content: space-between;
   display: flex;
   flex-direction: column;
@@ -9,8 +14,8 @@
 
 
   img {
-    object-fit: contain;
-    object-position: center;
-    max-width: 100%;
+    object-fit: cover;
+    width: 100%;
+    max-height: 300px;
   }
 }
