--- a/app/views/lists/_movie_card.html.erb
+++ b/app/views/lists/_movie_card.html.erb
@@ -1,16 +1,24 @@
 <div class="movie-card">
   <div>
     <img src="<%= movie.poster_url %>" alt="Poster of <%= movie.title %>">
-    <h2>
-      <%= movie.title %>  <%= movie.rating %>
-    </h2>
+    <h2><%= movie.title %></h2>
+    <p>
+      <% movie.rating.round.times do %>
+        <i class="fa-solid fa-star"></i>
+      <% end %>
+      <% (10 - movie.rating.round).times do %>
+        <i class="fa-regular fa-star"></i>
+      <% end %>
+       - <%= movie.rating %>
+    </p>
+
     <p>
       <%= movie.overview %>
     </p>
   </div>
 
   <div class="d-flex flex-row justify-content-end">
-    <%= button_to "Remove from list", bookmark_path(bookmark), method: :delete %>
+    <%= button_to "Remove from list", bookmark_path(bookmark), method: :delete, class: "btn btn-danger m-2" %>
   </div>
 
 </div>
