--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,12 @@
-<h1>All lists</h1>
-<% @lists.each do |list| %>
-  <%= render 'list_card', list: list %>
-<% end %>
+<div class="banner" style="background-image: url(https://t3.ftcdn.net/jpg/04/19/20/80/360_F_419208090_GoYwLz1S9kTSFDkHHtwtUUkWpHVuBejI.jpg);">
+  <h1>All movie lists</h1>
+  <div class="top-right">
+    <%= link_to 'Add a new list', new_list_path, class:"btn btn-success" %>
+  </div>
 
-<%= link_to 'Add a new list', new_list_path %>
+</div>
+<div class="d-flex flex-row gap-3 p-3">
+  <% @lists.each do |list| %>
+    <%= render 'list_card', list: list %>
+  <% end %>
+</div>
