--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,47 @@
-<h1><%= @list.name %></h1>
-<%= link_to 'Add a movie', new_list_bookmark_path(@list) %>
+<div data-controller='toggle'>
+  <div
+    class="banner"
+    style="background-image: url(<%= @list.photo_url %>);"
+    >
+    <h1><%= @list.name %></h1>
+    <div class="top-right d-flex flex-column">
+      <div>
+        <div class="btn btn-warning"><%= @list.movies.size %> movie<%= 's' if @list.movies.size > 1 %></div>
+        <button class='btn btn-success' data-action="toggle#toggleForm">Add a movie</button>
+      </div>
+      <%= render "bookmarks/new_bm_form", bookmark: Bookmark.new, list: @list %>
+    </div>
+    <div class="top-left">
+      <%= link_to '<<', lists_path, class:"btn btn-outline-secondary" %>
+    </div>
+  </div>
 
-<div class="d-flex gap-3">
-  <% @list.bookmarks.each do |bookmark| %>
-    <%= render 'movie_card', movie: bookmark.movie, bookmark: bookmark %>
-  <% end %>
+  <div class="movie-cards">
+    <% @list.bookmarks.each do |bookmark| %>
+      <%= render 'movie_card', movie: bookmark.movie, bookmark: bookmark %>
+    <% end %>
+  </div>
+  <div class="row  p-5"">
+    <div class="col-9 d-flex align-content-start flex-wrap gap-2">
+      <% @list.reviews.each do |review| %>
+        <div class="card p-2" style="flex-grow: 1 ; width: 250px;">
+          <p>
+          <% review.rating.round.times do %>
+            <i class="fa-solid fa-star"></i>
+          <% end %>
+          <% (5 - review.rating.round).times do %>
+            <i class="fa-regular fa-star"></i>
+          <% end %>
+          - <%= review.rating %>
+        </p>
+        <p><%= review.comment %></p>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-3">
+      <%= render "reviews/new_rv_form", review: Review.new, list: @list %>
+    </div>
+  </div>
+
+
 </div>
